force-app/main/default/objects/ApplicationLogSetting__c/ApplicationLogSetting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Configuration for Application Log such as available debug level</description>
    <label>Application Log Setting</label>
</CustomObject>