force-app/main/default/objects/ApplicationLogSetting__c/fields/Debug__c.field-meta.xml
<CustomField>
    <fullName>Debug__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Information that is diagnostically helpful to people more than just developers (IT, sysadmins, etc.).</description>
    <inlineHelpText>Information that is diagnostically helpful to people more than just developers (IT, sysadmins, etc.).</inlineHelpText>
    <label>Debug</label>
    <type>Checkbox</type>
</CustomField>