force-app/main/default/objects/ApplicationLogSetting__c/fields/Error__c.field-meta.xml
<CustomField>
    <fullName>Error__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Any error which is fatal to the operation, but not the service or application (can&#39;t open a required file, missing data, etc.). These errors will force user (administrator, or direct user) intervention. These are usually reserved (in my apps) for incorrect connection strings, missing services, etc.</description>
    <inlineHelpText>Any error which is fatal to the operation, but not the service or application. These errors will force user (administrator, or direct user) intervention. These are usually reserved (in my apps) for incorrect connection strings, missing services, etc.</inlineHelpText>
    <label>Error</label>
    <type>Checkbox</type>
</CustomField>