force-app/main/default/objects/ApplicationLogSetting__c/fields/Info__c.field-meta.xml
<CustomField>
    <fullName>Info__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Generally useful information to log (service start/stop, configuration assumptions, etc). Info I want to always have available but usually don&#39;t care about under normal circumstances. This is my out-of-the-box config level.</description>
    <inlineHelpText>Generally useful information to log (service start/stop, configuration assumptions, etc). Info I want to always have available but usually don&#39;t care about under normal circumstances. This is my out-of-the-box config level.</inlineHelpText>
    <label>Info</label>
    <type>Checkbox</type>
</CustomField>