force-app/main/default/objects/ApplicationLogSetting__c/fields/Warning__c.field-meta.xml
<CustomField>
    <fullName>Warning__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Anything that can potentially cause application oddities, but for which I am automatically recovering. (Such as switching from a primary to backup server, retrying an operation, missing secondary data, etc.)</description>
    <inlineHelpText>Anything that can potentially cause application oddities, but for which I am automatically recovering. (Such as switching from a primary to backup server, retrying an operation, missing secondary data, etc.)</inlineHelpText>
    <label>Warning</label>
    <type>Checkbox</type>
</CustomField>